# fastapi-supabase

./: .env.example  .gitignore  .windsurfrules  LICENSE  README.md  create_project_structure.sh  create_superuser.sh  logging.ini  manage_migrations.sh  pyproject.toml  pyrightconfig.json
src/: main.py
src/core/: config.py  lifespan.py  security.py
src/core/interfaces/: security.py
src/core/providers/: security.py
src/item/: crud.py  interfaces.py  schemas.py
src/item/api_v1/: endpoints.py
src/scripts/: create_superuser.py
src/shared/: crud_base.py
src/supabase/: deps.py  login_swagger.py  schemas.py
src/supabase/sql/: 01_initial_setup.sql  02_example_changes.sql  README.md
