[project]
name = "fastapi-supabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=35.0.0",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "slowapi>=0.1.9",
    "supabase>=2.12.0",
    "uvicorn>=0.34.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.5",
]

[tool.ruff]
exclude = [
    ".windsurfrules",
]
